--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
         <title>Scrabble Solver</title>
         <meta name="author" content="Joshua Wolfe">
-        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
-        <script src="jquery-3.2.1.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <!-- <script src="jquery-3.2.1.min.js"></script> -->
         <link rel="stylesheet" type="text/css" href="style/style.css">
         <link rel="stylesheet" type="text/css" href="style/popup.css">
     </head>
