Added loading message and minor performance tweaks

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body>
         <h1 class="title">Scrabble Helper</h1>
-        <div id="loading"></div>
+        <div id="loading" class="loading">Loading dictionary please wait...</div>
         <div id="activeTileContainer" class="activeTileContainer"></div>
         <div id="results"></div>
         <a onclick="clearAll()" class="btn" style="position:absolute;top:3px;right:3px;">Reset</a>
